<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewmodel"
            type="com.example.mvvmsample.ui.auth.AuthViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginActivity"
        android:orientation="vertical"
        android:padding="15dp"
        android:gravity="center">

        <EditText
            android:id="@+id/email"
            android:text="@{viewmodel.email}"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/example_gmail_com"/>

        <EditText
            android:id="@+id/password"
            android:text="@{viewmodel.password}"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/forgotBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/signInBtn"
            android:onClick="@{viewmodel::onLoginBtnClick}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="false"/>

    </LinearLayout>
</layout>
